fixed misalignment

--- a/index.css
+++ b/index.css
@@ -77,7 +77,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   text-align: left;
   padding: 0%;
   position: absolute;
-  top: 6.125%;
+  top: 6.6%;
 }
 
 /* Style the buttons that are used to open the tab content */
@@ -93,6 +93,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   cursor: pointer;
   transition: 0.5s;
   font-size: larger;
+
   
 }
 
